--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
@@ -433,7 +433,7 @@
 										  tr.remove();
 									  } else {
 										console.log("eductnSq : "+eductnSq);
-										  modalConfirm("알림", "해당 작가학력정보를 삭제 하시겠습니까?", function(confrim){
+										  modalConfirm("해당 작가학력정보를 삭제 하시겠습니까?", function(confrim){
 												if(confrim){
 													
 													let eduDeleteParam = {
@@ -545,7 +545,7 @@
 									 } else {
 										 console.log("careerSq : "+careerSq);
 										 
-										 modalConfirm("알림", "해당 작가경력정보를 삭제 하시겠습니까?", function(confrim){
+										 modalConfirm("해당 작가경력정보를 삭제 하시겠습니까?", function(confrim){
 												if(confrim){
 													
 													let careerParam = {
@@ -595,7 +595,7 @@
 									 } else {
 										 console.log("careerSq : "+careerSq);
 										 
-										 modalConfirm("알림", "해당 작가경력-소속정보를 삭제 하시겠습니까?", function(confrim){
+										 modalConfirm("해당 작가경력-소속정보를 삭제 하시겠습니까?", function(confrim){
 												if(confrim){
 													
 													let careerParam = {
@@ -678,7 +678,7 @@
 												
 													console.log("exhbtnSq : "+exhbtnSq);
 																									 
-													 modalConfirm("알림", "해당 전시정보를 삭제 하시겠습니까?", function(confrim){
+													 modalConfirm("해당 전시정보를 삭제 하시겠습니까?", function(confrim){
 															if(confrim){
 																
 																let exhbtnSqParam = {
@@ -756,7 +756,7 @@
 												
 													console.log("exhbtnSq : "+exhbtnSq);
 																									 
-													 modalConfirm("알림", "해당 전시정보를 삭제 하시겠습니까?", function(confrim){
+													 modalConfirm("해당 전시정보를 삭제 하시겠습니까?", function(confrim){
 															if(confrim){
 																
 																let exhbtnSqParam = {
@@ -832,7 +832,7 @@
 												
 													console.log("exhbtnSq : "+exhbtnSq);
 																									 
-													 modalConfirm("알림", "해당 전시정보를 삭제 하시겠습니까?", function(confrim){
+													 modalConfirm("해당 전시정보를 삭제 하시겠습니까?", function(confrim){
 															if(confrim){
 																
 																let exhbtnSqParam = {
@@ -907,7 +907,7 @@
 												
 													console.log("exhbtnSq : "+exhbtnSq);
 																									 
-													 modalConfirm("알림", "해당 전시정보를 삭제 하시겠습니까?", function(confrim){
+													 modalConfirm("해당 전시정보를 삭제 하시겠습니까?", function(confrim){
 															if(confrim){
 																
 																let exhbtnSqParam = {
