--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
@@ -317,6 +317,15 @@
 									</td>
 								</tr>
 								<tr>
+									<th><span class="">작품 상태</span></th>
+									<td>
+										<input type="text" class="input-4" id="workState"/>
+										<p class="table-p">
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 내용을 입력해주세요.  <br/>
+										</p>
+									</td>
+								</tr>
+								<tr>
 									<th><span class="">소장가</span></th>
 									<td>
 										<input type="text" class="input-4" id="workPrc"/>
@@ -694,6 +703,7 @@ $(function() {
 							});
 						}
 					}
+					$("#workState").val(storage.workState);
 					$("#workPrc").val(storage.workPrc);
 					$("#workSizeWidth").val(storage.workSizeWidth);
 					$("#workSizeDepth").val(storage.workSizeDepth);
@@ -718,6 +728,7 @@ function myWorkStorage(){
 																workClrCd : $('input[name=workClrCd]:checked').val(),
 																workShpCd : $('input[name=workShpCd]:checked').val(),
 																workClsfcCd : result.workClsfcCd,
+																workState : $("#workState").val(),
 																workPrc : $("#workPrc").val(),
 																workSizeWidth : $("#workSizeWidth").val(),
 																workSizeDepth : $("#workSizeDepth").val(),
@@ -878,6 +889,7 @@ function myWorkReg(){
 		work.workVideoUrl = $("#workVideoUrl").val();
 		work.workIntrdc = $("#workIntrdc").val();
 		work.keywrd = $("#keywrd").val();
+		work.workState = $("#workState").val();
 		//공개여부
 		work.workOpenYn = $('input[name=workOpenYn]:checked').val();
 		
