--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -86,7 +86,7 @@ $(function() {
 		modalAlertShow("로그인 후 이용하실 수 있습니다.", "main");
 	}
 });
-$(document).on("click", ".myWork", function(){
+/* $(document).on("click", ".myWork", function(){
 	pageGoPost({
 		url:"/myWork",
 		target:"_self",
@@ -94,7 +94,7 @@ $(document).on("click", ".myWork", function(){
 			["artstSq", artstSq]
 		]
 	});
-});
+}); */
 $(document).on("click", ".myCollection", function(){
 	pageGoPost({
 		url:"/myCollection",
