--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -442,20 +442,31 @@ function myCollectionList(){
 				html += '<div class="item-body">';
 				html += '<div>';
 				html += '<div class="uesr-s">';
-			if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
- 				html += '<img src="resources/img/de/ues-icon.png"/>';
+			if(result[i].artstProfileImgUrl != null && result[i].artstProfileImgUrl != ""){
+				html += '<img src="'+ result[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
  			}else{
- 				html += '<img src="'+ result[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
+ 				html += '<img src="resources/img/de/ues-icon.png"/>';
  			}
 				html += '</div>';
 				
 				
 				html += '<div class="text-s" style="padding-left:5px;text-align:left">';
-				
+			if(result[i].artstBirthYear != null && result[i].artstBirthYear != ""){
 				html += '<h3>'+ result[i].artstActvtyNm +' ('+ result[i].artstBirthYear +')</h3>';
+    		}else{
+    			html += '<h3>'+ result[i].artstActvtyNm +'</h3>';
+    		}
+			if(result[i].workProdcYear != null && result[i].workProdcYear != ""){
 				html += '<p class="ts-1">'+ result[i].workNm +' ('+ result[i].workProdcYear +')</p>';
+			}else{
+				html += '<p class="ts-1">'+ result[i].workNm +'</p>';
+			}
+			if(result[i].workMatrl != null && result[i].workMatrl != ""){
 				html += '<p>'+ result[i].workMatrl +'</p>';
+			}
+			if(result[i].workSizeDepth != null && result[i].workSizeDepth != "" && result[i].workSizeWidth != null && result[i].workSizeWidth != ""){
 				html += '<p>'+ result[i].workSizeDepth +'x'+ result[i].workSizeWidth +'</p>';
+			}
 				html += '</div>'
 				
 				html += '</div>';
