--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -13,8 +13,9 @@
 	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap.min.css"/>
 	<link type="text/css" rel="stylesheet" href="resources/css/common_pc.css"/>
 	
-	<link type="text/css" media="screen and (max-width: 1319px)" rel="stylesheet" href="resources/css/ui_mo.css" />
-	<link type="text/css" media="screen and (min-width: 1320px)" rel="stylesheet" href="resources/css/ui_pc.css" />
+	<link type="text/css" media="screen and (max-width: 750px)" rel="stylesheet" href="resources/css/ui_mo.css" />
+	<link type="text/css" media="screen and (min-width: 751px) and (max-width: 1536px)" rel="stylesheet" href="resources/css/ui_tablet.css" />
+	<link type="text/css" media="screen and (min-width: 1537px)" rel="stylesheet" href="resources/css/ui_pc.css" />
 	
 	<link type="text/css" rel="stylesheet" href="resources/css/jquery-ui.css">
 	
@@ -140,10 +141,10 @@
 		</div>
 		<div class="bab-bo">
 			<div class="ta-sho">
-				<a href="#"><span>Guide</span></a>
+				<a href="javascript:void(0);"><span>Guide</span></a>
 			</div>
 			<div class="mab-rb">
-				<a href="javascript:fnModalAlert();" class="mab-a"><span>Guide</span></a>
+				<a href="javascript:void(0);" onclick="openGuide()" class="mab-a"><span>Guide</span></a>
 				<ul class="mab-ul">
 					<!-- <li><a href="javascript:fnModalAlert();"><img src="resources/img/icon-4.png" /> <span>거래방법</span></a></li> -->
 					<li><a href="#" id="artstReg" data-toggle="modal" data-target="#authorModal1"><img src="resources/img/icon-5.png" /> <span>작가등록</span></a></li>
@@ -432,6 +433,38 @@ $("#findIdLoginBtn").click(function() {
 		</div>
 	</div>
 	</form>
+</div>
+
+<!-- 콜렉터가이드-->
+<div class="modal fade modal-s" id="guide_1" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-baeg max-w600">
+		<div class="modal-content">
+			<div class="modal-header" style="padding: 0;min-height: 0;height: 0;">
+				<div class="baegs">
+				    <div class="close" onclick="closeGuide()"><img src="resources/img/ba/icon-end.png" /></div>
+				</div>
+			</div>
+			<div class="modal-body login-body">
+				<img src="resources/img/guide_img1.png"  class="mo_width"/>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- 작가가이드-->
+<div class="modal fade modal-s" id="guide_2" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-baeg max-w600">
+		<div class="modal-content">
+			<div class="modal-header" style="padding: 0;min-height: 0;height: 0;">
+				<div class="baegs">
+				    <div class="close" onclick="closeGuide()"><img src="resources/img/ba/icon-end.png" /></div>
+				</div>
+			</div>
+			<div class="modal-body login-body">
+				<img src="resources/img/guide_img2.png"  class="mo_width"/>
+			</div>
+		</div>
+	</div>
 </div>
 <script th:inline="javascript">
 function openFindPwdModal(){
@@ -853,8 +886,22 @@ $(document).ready(function() {
 // 	});
 
 });
-
-
+function openGuide(){
+	if(sAuthSqVal == "2"){
+		$('body').css("overflow", "hidden");
+		$('#guide_2').modal({backdrop: 'static', keyboard: false});
+		$("#guide_2").modal("show");
+	}else{
+		$('body').css("overflow", "hidden");
+		$('#guide_1').modal({backdrop: 'static', keyboard: false});
+		$("#guide_1").modal("show");
+	}
+}
+function closeGuide(){
+	$('body').css("overflow", "scroll");
+	$("#guide_1").modal("hide");
+	$("#guide_2").modal("hide");
+}
 $('#loginModal').on('hidden.bs.modal', function () {
 	//아이디 초기화
 	$("#txt_Id").val('');
@@ -1652,7 +1699,6 @@ function btn_search_onclick(){
 	
 }
 $(document).on("click", ".myWork", function(){
-	
 	if(sAuthSqVal != "2"){
 		modalAlertShow("작가로 등록된 회원만 이용할 수 있습니다.");
 	}else{
