--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -85,16 +85,19 @@
     
     <link rel="icon" type="image/png" href="resources/img/favicon.png">
     
+    
+    
 </head>
 <body>
 	<div class="wrap">
 	<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>  	
+	
 		<div class="body-wrap">
 			<div class="contents">
 				<div class="con-wrap">
 					<th:block th:replace="thymeleaf/myPageLeft :: myPageLeftFragment"></th:block>
 					
-					<div class="con-right m-max1300">
+					<div class="con-right m-max1300" style="display:none">
 						<div class="me-left">
 							<div class="med">
 								<h2 class="">거래정보</h2>
@@ -602,10 +605,17 @@
 </div>
 <script th:inline="javascript">
 $(function(){
+	$(".con-right").hide();
+	
 	const url = new URL(window.location.href);
 	const urlParam = url.searchParams;
+	console.log("MbrSqVal :"+sMbrSqVal);
 	if(sMbrSqVal != urlParam.get('mbrSq')){
-		location.href="/main";
+		//location.href="/main";
+		 modalAlertShow("잘못된 접근입니다. 메인페이지로 이동합니다.", "main");
+		return;
+	} else {
+		$(".con-right").show();
 	}
 });
 
