작품 삭제 기능 추가 수정  - 거래중인 작품은 삭제 되지 않도록 수정(Alert 띄우고 삭제 안되도록 수정)  - 삭제 처리된 작품은 검색/작가 라이브러리에도 노출 안되도록 수정

--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -1862,7 +1862,7 @@ function setTodayTime(){
     
 	
 	
-	
+	<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 	
 </body>
 
