--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -120,12 +120,12 @@
 									</a>
 								</li>
 							</ul>
-							<div class="med-ic" id="delCollection">
+							<div class="med-ic">
 								<div class="por">
-									<!-- <div class="tootip-5">삭제</div> -->
-									<a href="javascript:delCollectionBtn();" class="">
+									<!-- <div class="tootip-5">설정</div> 
+									<a href="javascript:void(0)" class="">
 										<img src="resources/img/mypage/icon-8.png" class="med-me">									
-									</a>									
+									</a>-->									
 								</div>
 							</div>
 						</div>
