--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
@@ -1565,7 +1565,7 @@ $(document).ready(function () {
 		
 	}
 	
-	function delUse(dealCheckValue){
+	/* function delUse(dealCheckValue){
 		alert("delUse");
 		console.log("dealCheckValue :"+dealCheckValue);
 		
@@ -1584,7 +1584,7 @@ $(document).ready(function () {
 			
 			
 		}
-	}
+	} */
 	
 	//작품 삭제
 	/* function delCollection(workSq){
