--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
@@ -1519,7 +1519,7 @@ $(document).ready(function () {
 	
 	//작품 삭제 하기전에 거래중인지 확인
 	function dealCheck(workSq){
-		//debugger;
+		
 		var result;	//ajax response 결과값 저장할 변수
 		$.ajax({
 	         type: "post",
@@ -1542,7 +1542,7 @@ $(document).ready(function () {
 	         		if(confirm){
 						//소장품 삭제 승인
 						if(dealCheckValue > 0) {
-							modalAlertShow("해상 소장품이 거래중입니다. <br> 거래중인 소장품은 삭제 하실 수 없습니다. ");
+							modalAlertShow("해당 소장품이 거래중입니다. <br> 거래중인 소장품은 삭제 하실 수 없습니다. ");
 							return;
 						} else if(dealCheckValue == 0) {
 							//소장품 삭제 Function Call
@@ -1565,37 +1565,6 @@ $(document).ready(function () {
 		
 	}
 	
-	/* function delUse(dealCheckValue){
-		alert("delUse");
-		console.log("dealCheckValue :"+dealCheckValue);
-		
-		if (dealCheckValue > 0){			
-		
-			modalConfirm("거래 등록된 소장품은 삭제 하실수 없습니다.",function(confirm){
-				if(confirm){
-					location.reload();
-				}else{
-					history.back();
-				}		
-			});
-		
-		}else{
-			
-			
-			
-		}
-	} */
-	
-	//작품 삭제
-	/* function delCollection(workSq){
-		//삭제 여부 추가 확인
-		modalConfirm("정말 삭제 하시겠습니까?",function(confirm){
-			if(confirm){
-				deletePro(workSq);
-			}
-		});		
-	 } */
-	
 	//작품 삭제 확인시 실행
 	function collDeletePro(workSq){
 		$.ajax({
@@ -1607,7 +1576,7 @@ $(document).ready(function () {
 	        	modalAlertShow("정상적으로 삭제 되었습니다.","myCollection")
 	        },
 	        error: function(error) {
-	            alert("오류 발생" + error);
+	        	console.log("오류 발생" + error);
 	        }
 	         
 		});
