Main Het Deal 이미지 UI 수정

--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -504,6 +504,7 @@ html, body{font-size: calc(100vw / 75);}
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    object-fit:contain;
 }
 .hd-div .hd-text{
     display: none;
